@@ -1,3 +1,11 @@
+2008-05-27  Inge Wallin  <inge@lysator.liu.se>
+
+	Make mercator projection work somewhat.
+	* src/lib/VectorMap.cpp (createFromPntMap): Handle Mercator case
+	(mercatorCreateFromPntMap): New function
+	(createPolyLine):           Handle Mercator case.
+	(mercatorCreatePolyLine):   New function
+
 2008-05-26  Jens-Michael Hoffmann  <jensmh@gmx.de>
 
     * src/lib/TextureTile.cpp (loadRawTile)
